force-app/main/default/objects/Question_questionnaire__c/Question_questionnaire__c.object-meta.xml
<CustomObject>
    <label>Question questionnaire</label>
    <nameField>
        <displayFormat>QQ/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions questionnaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>