force-app/main/default/objects/Question_questionnaire__c/fields/actif__c.field-meta.xml
<CustomField>
    <fullName>actif__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Est-ce une question active? Si la question est désactivée, celle-ci est supprimée du questionnaire, mais son intitulé et ses réponses sont archivées sur Salesforce sans être détruits</description>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>