force-app/main/default/objects/Question_questionnaire__c/fields/commentaire__c.field-meta.xml
<CustomField>
    <fullName>commentaire__c</fullName>
    <label>Commentaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>