force-app/main/default/objects/Question_questionnaire__c/fields/familleChampEnfant__c.field-meta.xml
<CustomField>
    <fullName>familleChampEnfant__c</fullName>
    <label>Famille champ enfant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>