force-app/main/default/objects/Question_questionnaire__c/fields/familleChampParent__c.field-meta.xml
<CustomField>
    <fullName>familleChampParent__c</fullName>
    <label>Famille champ parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>