force-app/main/default/objects/Question_questionnaire__c/fields/numQuestion__c.field-meta.xml
<CustomField>
    <fullName>numQuestion__c</fullName>
    <label>Numéro de la question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>