force-app/main/default/objects/Question_questionnaire__c/fields/obligatoire__c.field-meta.xml
<CustomField>
    <fullName>obligatoire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligatoire</label>
    <type>Checkbox</type>
</CustomField>