force-app/main/default/objects/Question_questionnaire__c/fields/ordre__c.field-meta.xml
<CustomField>
    <fullName>ordre__c</fullName>
    <label>Ordre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>