force-app/main/default/objects/Question_questionnaire__c/fields/page__c.field-meta.xml
<CustomField>
    <fullName>page__c</fullName>
    <label>Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>