force-app/main/default/objects/Question_questionnaire__c/fields/question__c.field-meta.xml
<CustomField>
    <fullName>question__c</fullName>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>