force-app/main/default/objects/Question_questionnaire__c/fields/questionnaire__c.field-meta.xml
<CustomField>
    <fullName>questionnaire__c</fullName>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questions questionnaire</relationshipLabel>
    <relationshipName>Questions_questionnaire</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>