force-app/main/default/objects/Question_questionnaire__c/fields/questionParent__c.field-meta.xml
<CustomField>
    <fullName>questionParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question parent</label>
    <referenceTo>Question_questionnaire__c</referenceTo>
    <relationshipLabel>Questions enfant</relationshipLabel>
    <relationshipName>Questions_enfant</relationshipName>
    <type>Lookup</type>
</CustomField>