force-app/main/default/objects/Question_questionnaire__c/fields/reponseAffichage__c.field-meta.xml
<CustomField>
    <fullName>reponseAffichage__c</fullName>
    <label>Réponse d&apos;Affichage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>