force-app/main/default/objects/Question_questionnaire__c/fields/typeReponse__c.field-meta.xml
<CustomField>
    <fullName>typeReponse__c</fullName>
    <description>Type de réponse nécessaire pour répondre à la question.
Mettre la valeur &quot;Étiquette&quot; si c&apos;est juste pour avoir un texte.</description>
    <label>Type de réponse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titre</fullName>
            </value>
            <value>
                <fullName>Etiquette</fullName>
            </value>
            <value>
                <fullName>Texte</fullName>
            </value>
            <value>
                <fullName>Case à cocher</fullName>
            </value>
            <value>
                <fullName>Numéro</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Matrice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>