force-app/main/default/objects/Question_questionnaire__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>question__c</columns>
    <columns>questionnaire__c</columns>
    <columns>commentaire__c</columns>
    <columns>numQuestion__c</columns>
    <columns>obligatoire__c</columns>
    <columns>typeReponse__c</columns>
    <columns>questionParent__c</columns>
    <columns>page__c</columns>
    <columns>ordre__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>